--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -552,6 +552,19 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.Chart apa yang anda pilih untuk problem diatas dan mengapa anda memilih chart tersebut?\n",
+    "\n",
+    "Scatter plot memungkinkan kita untuk melihat lokasi setiap titik data (koordinat jamur) dalam ruang dua dimensi, sehingga kita dapat dengan mudah mengidentifikasi pola sebaran jamur.\n",
+    "\n",
+    "2.Dimanakah posisi koordinat pusat (x,y) pusat pertumbuhan jamur berada?\n",
+    "\n",
+    "Dari data yang telah di visualisasi menggunakan scatter plot maka posisi koordinat pusat X adalah (7.64) dan posisi koordinat Y adalah (5.13)."
+   ]
   }
  ],
  "metadata": {
